adding some information

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 </section>
 
 <footer>
-    <p>Saiful&copy;Web developer& All rights reserved copy rights-2021</p>
+    <p>Saiful&copy;Web developer & all rights reserved copy rights-2021.</p>
 </footer>
 
 </body>
